proper license display; spacing fixes

--- a/packages/web/src/pages/upload-page/forms/AttributionModalForm.module.css
+++ b/packages/web/src/pages/upload-page/forms/AttributionModalForm.module.css
@@ -1,6 +1,7 @@
 .row {
   display: flex;
   flex-direction: row;
+  align-items: center;
 }
 
 .col {
@@ -8,12 +9,9 @@
   flex-direction: column;
 }
 
-.isCode {
-  display: flex;
-  flex-direction: column;
-  gap: var(--unit-4);
+.gap1 {
+  gap: var(--unit-1);
 }
-
 .gap2 {
   gap: var(--unit-2);
 }
@@ -41,4 +39,19 @@
 
 .disabled {
   opacity: 0.5;
+}
+
+.license {
+  display: flex;
+  flex-direction: column;
+  gap: var(--unit-2);
+  padding: var(--unit-4);
+  border-radius: 8px;
+  border: 1px solid var(--neutral-light-8);
+  background: var(--neutral-light-10);
+  text-transform: capitalize;
+}
+
+.licenseIcons {
+  gap: 6px;
 }
